--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
   grid-area: header;
-  background-color: #ff4f81;
+  background-color: rgb(200, 200, 200)
+ 
 }
 .header img {
  width: 80px;
