--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,10 @@
     grid-template-rows: 20%px 1fr;
     grid-template-columns: 20% 1fr;
     grid-gap: 1vw;
-    background-color: #e4002b
+    /* background-color: #e4002b */
 }
 .app-wrapper-content {
     grid-area: contant;
-    background-color:rgb(200, 200, 200)
+    background-color:rgb(50, 50, 50) 
     /* background-color: #87cefa; */
 }
