--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -36,3 +36,9 @@
 .selectedPage {
     font-weight: bold;
 }
+.mainImageWrapper  {
+    height: 250px;
+    background-size:cover;
+    background-position: center
+  }
+ 
