--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,40 @@
 .header {
-  grid-area: header;
-  background-color:rgb(50, 50, 50) 
- 
+  padding: 0 15px;
+  min-height: 75px;
+  line-height: 73px;
+  position: fixed;
+  top: 0;
+  left: auto;
+  right: 0;
+  width: 100%;
+  display: inline-block;
+  z-index: 9999;
+  background: #1e2745;  
+  margin: 0;
+  box-shadow: 0px 0px 20px 0px rgba(44, 101, 144, 0.1);
+  display: flex;
+  justify-content: space-between;
+
 }
-.header img {
- width: 80px;
+.logo {
+  display: flex;
+  justify-content: space-between;
+}
+a {
+  display: flex;
+  align-items: flex-start;
+  color: #2aa3fb;
+  text-decoration: none;
+}
+ img {
+height: 45px;
+width: 45px;
+}
+span {
+  margin-left: 10px;
+  font-size: 28px;
+  font-family: 'Poppins', sans-serif;
+  color: #8c91b6;
 }
 .loginBlock {
   float: right;
