--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,22 +20,47 @@
   display: flex;
   justify-content: space-between;
 }
+.searchForm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+  height: 40px;
+  padding: 5px 15px 5px 15px;
+  border-radius: 10px;
+  color: #8c91b6;
+  border: none;
+  background: #29324f;
+  
+}
 a {
   display: flex;
-  align-items: flex-start;
-  color: #2aa3fb;
-  text-decoration: none;
+  align-items: flex-start;  
 }
- img {
-height: 45px;
-width: 45px;
-}
+
 span {
   margin-left: 10px;
   font-size: 28px;
   font-family: 'Poppins', sans-serif;
   color: #8c91b6;
 }
+.searchBur {
+  display: flex;
+  align-items: center;
+}
 .loginBlock {
   float: right;
 }
+.searchInput {
+  border: none;
+  background: #29324f;
+  width: 100%;
+  
+}
+input::placeholder {
+  margin: 0;
+  color: #8c91b6;
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+}
+
