--- a/src/common/FormControl/FormControl.module.css
+++ b/src/common/FormControl/FormControl.module.css
@@ -9,3 +9,8 @@ border: 2px solid red
   border: 2px solid red;
   color: red;
 }
+.loginForm{
+  display: flex;  
+  flex-direction: column;
+  justify-content: space-between;
+}
