--- a/src/components/News/News.module.css
+++ b/src/components/News/News.module.css
@@ -3,4 +3,20 @@
     background-size:cover;
     background-position: center
   }
- 
+  .titleOnImage {
+    position: absolute;
+    top: 40%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: white;
+  }
+  .titleOnImageBlock {
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 5px;
+  }
+  h2 {
+    font-size: 2.300em;
+  }
