--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,6 +20,9 @@
   display: flex;
   justify-content: space-between;
 }
+.logo img {
+  height: 80px;
+}
 .searchForm {
   display: flex;
   justify-content: space-between;
@@ -49,7 +52,19 @@ span {
   align-items: center;
 }
 .loginBlock {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   float: right;
+}
+.loginBlock img {
+  border-radius: 70px;
+  width: 70px;
+  height: 70px;
+  margin-right: 20px;
+}
+.loginBlock button {
+  margin-left: 20px;
 }
 .searchInput {
   border: none;
