--- a/src/common/FormControl/FormControl.module.css
+++ b/src/common/FormControl/FormControl.module.css
@@ -9,12 +9,28 @@ border: 2px solid red
   border: 2px solid red;
   color: red;
 }
-.loginForm{
-  display: flex;  
-  flex-direction: column;
+.form{
+  display: flex;
+  flex-direction: column;  
   justify-content: space-between;
+  align-items: center;
 }
 
-.loginForm img{
+.form img{
 width: 160px;
+}
+
+.loginBlock {
+  display: flex;
+  flex-direction: column;  
+  justify-content: space-between;
+  align-items: center;
+}
+.searchButton {
+  position: absolute;
+  top: 508px;
+  left:640px;
+}
+.loginCheckBox {
+  height: 20px;
 }
