--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,31 @@ button:hover {
   background: #2aa3fb;
   border-color: #2aa3fb;
 }
+
+textarea {
+  margin: 10px;
+  border: none;
+  background: #29324f;
+  width: 350px;
+  min-height: 100px;
+  padding: 5px 15px 5px 15px;
+  border-radius: 10px;
+  color: #8c91b6;
+}
+
+input, input:valid {
+  margin: 10px;
+  border: none;
+  background: #29324f;
+  width: 350px;
+  height: 40px;
+  padding: 5px 15px 5px 15px;
+  border-radius: 10px;
+  color: #8c91b6;  
+}
+textarea::placeholder, input::placeholder {
+  margin: 0;
+  color: #8c91b6;
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+}
